--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
       uses: easingthemes/ssh-deploy@main
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        ARGS: "-rlgoDzvc -i"
+        ARGS: "-rlptDzvc -i"
         SOURCE: "/"
         REMOTE_HOST: ${{ secrets.SSH_HOST }}
         REMOTE_USER: "kevin"
